--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Expense Tracker - Login</title>
+    <title>Expense Tracker - Signup</title>
   </head>
   <body class="body">
 <!--  Creating navbar-->
@@ -28,18 +28,20 @@
           <h1 class="text-light display-4 mt-50" style="font-size:80px">Bring the power of Analytics to your life and save money</h1>
         </div>
         <div class="col-md-4">
-<!--          this is second columns, adding login section in this -->
+<!--          second columns, adding login section in this -->
           <div class="card mt-50">
             <div class="card-body">
               <form class="form">
+                <label>Name</label><br>
+                <input type="text" class="form-control" placeholder="Enter your full name"><br>
                 <label>Email</label><br>
-                <input type="email" class="form-control" placeholder="Enter your registered email"><br>
+                <input type="email" class="form-control" placeholder="Enter your email"><br>
                 <label>Password</label><br>
                 <input type="password" class="form-control" placeholder="Enter your password"><br><br>
                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
               </form>
-<!--                rout to register page on click Register-->
-              <p class="mt-2">Not a member? <a href="/register">Register</a></p>
+<!--                will route to home page/login on click Login-->
+              <p class="mt-2">Already a member? <a href="/">Login</a></p>
                 <p class="mt-2"><a href="/about">About Us</a> </p>
 
             </div>
