--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,11 @@
 <!--          this is second columns, adding login section in this -->
           <div class="card mt-50">
             <div class="card-body">
-              <form class="form">
+              <form class="form" method="post" action="/login_validation">
                 <label>Email</label><br>
-                <input type="email" class="form-control" placeholder="Enter your registered email"><br>
+                <input type="email" class="form-control" name="email" placeholder="Enter your registered email"><br>
                 <label>Password</label><br>
-                <input type="password" class="form-control" placeholder="Enter your password"><br><br>
+                <input type="password" class="form-control" name="password" placeholder="Enter your password"><br><br>
                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
               </form>
 <!--                rout to register page on click Register-->
