Registration functionality added

--- a/templates/register.html
+++ b/templates/register.html
@@ -31,14 +31,14 @@
 <!--          second columns, adding login section in this -->
           <div class="card mt-50">
             <div class="card-body">
-              <form class="form">
+              <form class="form" method="post" action="/registration">
                 <label>Name</label><br>
-                <input type="text" class="form-control" placeholder="Enter your full name"><br>
+                <input type="text" class="form-control" name="name" placeholder="Enter your full name"><br>
                 <label>Email</label><br>
-                <input type="email" class="form-control" placeholder="Enter your email"><br>
+                <input type="email" class="form-control" name="email" placeholder="Enter your email"><br>
                 <label>Password</label><br>
-                <input type="password" class="form-control" placeholder="Enter your password"><br><br>
-                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+                <input type="password" class="form-control" name="password" placeholder="Enter your password"><br><br>
+                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Register">
               </form>
 <!--                will route to home page/login on click Login-->
               <p class="mt-2">Already a member? <a href="/">Login</a></p>
