--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
         <a class="py-2 m-2 text-dark" href="#">Profile</a>
         <a class="py-2 m-2 text-dark" href="#">Settings</a>
       </nav>
-         <a class="btn m-2 btn-outline-warning" href="#">Logout</a>
+         <a class="btn m-2 btn-outline-warning" href="/logout">Logout</a>
     </div>
 
      <div class="container">
