Logout and session timeout functionality added

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
       <h5 class="m-3 mr-md-auto font-weight-normal">Expense Tracker</h5>
 
       <nav class="m-2 my-md-0 mr-md-3">
-        <a class="py-2 m-2 text-dark" href="#">Home</a>
+        <a class="py-2 m-2 text-dark" href="/home">Home</a>
         <a class="py-2 m-2 text-dark" href="#">Analysis</a>
         <a class="py-2 m-2 text-dark" href="#">Profile</a>
         <a class="py-2 m-2 text-dark" href="#">Settings</a>
