breadsrum update fixed and analysis/profile/contact page added

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,9 +18,9 @@
 
       <nav class="m-2 my-md-0 mr-md-3">
         <a class="py-2 m-2 text-dark" href="/home">Home</a>
-        <a class="py-2 m-2 text-dark" href="#">Analysis</a>
-        <a class="py-2 m-2 text-dark" href="#">Profile</a>
-        <a class="py-2 m-2 text-dark" href="#">About Us</a>
+        <a class="py-2 m-2 text-dark" href="/analysis">Analysis</a>
+        <a class="py-2 m-2 text-dark" href="/profile">Profile</a>
+        <a class="py-2 m-2 text-dark" href="/contact">Contact Us</a>
       </nav>
          <a class="btn m-2 btn-outline-warning" href="/logout">Logout</a>
     </div>
