--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
               </form>
 <!--                rout to register page on click Register-->
               <p class="mt-2">Not a member? <a href="/register">Register</a></p>
-                <p class="mt-2"><a href="/about">About Us</a> </p>
+                <p class="mt-2">Any Query? <a href="/contact">Contact Us</a> </p>
 
             </div>
           </div>
