--- a/templates/register.html
+++ b/templates/register.html
@@ -42,7 +42,7 @@
               </form>
 <!--                will route to home page/login on click Login-->
               <p class="mt-2">Already a member? <a href="/">Login</a></p>
-                <p class="mt-2"><a href="/about">About Us</a> </p>
+                <p class="mt-2">Any Query? <a href="/contact">Contact Us</a> </p>
 
             </div>
           </div>
