--- a/templates/login.html
+++ b/templates/login.html
@@ -33,9 +33,9 @@
             <div class="card-body">
               <form class="form" method="post" action="/login_validation">
                 <label>Email</label><br>
-                <input type="email" class="form-control" name="email" placeholder="Enter your registered email"><br>
+                <input type="email" class="form-control" name="email" placeholder="Enter your registered email" required><br>
                 <label>Password</label><br>
-                <input type="password" class="form-control" name="password" placeholder="Enter your password"><br><br>
+                <input type="password" class="form-control" name="password" placeholder="Enter your password" required><br><br>
                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
               </form>
 <!--                rout to register page on click Register-->
