--- a/templates/register.html
+++ b/templates/register.html
@@ -33,11 +33,11 @@
             <div class="card-body">
               <form class="form" method="post" action="/registration">
                 <label>Name</label><br>
-                <input type="text" class="form-control" name="name" placeholder="Enter your full name"><br>
+                <input type="text" class="form-control" name="name" placeholder="Enter your full name" required><br>
                 <label>Email</label><br>
-                <input type="email" class="form-control" name="email" placeholder="Enter your email"><br>
+                <input type="email" class="form-control" name="email" placeholder="Enter your email" required><br>
                 <label>Password</label><br>
-                <input type="password" class="form-control" name="password" placeholder="Enter your password"><br><br>
+                <input type="password" class="form-control" name="password" placeholder="Enter your password" required><br><br>
                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Register">
               </form>
 <!--                will route to home page/login on click Login-->
