--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,17 @@
       </nav>
          <a class="btn m-2 btn-outline-warning" href="/logout">Logout</a>
     </div>
+     <div>
+        {% for message in get_flashed_messages() %}
+         <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+         {% endfor %}
+
+     </div>
 
      <div class="container">
          <div class="row my-2">
