--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,14 @@
         </div>
         <div class="col-md-4">
 <!--          this is second columns, adding login section in this -->
+            {% for message in get_flashed_messages() %}
+         <div class="alert alert-warning alert-dismissible fade show my-1" role="alert">
+                    {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+         {% endfor %}
           <div class="card mt-50">
             <div class="card-body">
               <form class="form" method="post" action="/login_validation">
@@ -39,6 +47,7 @@
                 <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
               </form>
 <!--                rout to register page on click Register-->
+                <p class="mt-2"><a href="/reset_pass">Forget Password?</a></p>
               <p class="mt-2">Not a member? <a href="/register">Register</a></p>
                 <p class="mt-2">Any Query? <a href="/contact">Contact Us</a> </p>
 
