--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <title>Expense Tracker - Login</title>
   </head>
   <body class="body">
@@ -39,27 +39,55 @@
          {% endfor %}
           <div class="card mt-50">
             <div class="card-body">
-              <form class="form" method="post" action="/login_validation">
-                <label>Email</label><br>
-                <input type="email" class="form-control" name="email" placeholder="Enter your registered email" required><br>
-                <label>Password</label><br>
-                <input type="password" class="form-control" name="password" placeholder="Enter your password" required><br><br>
-                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
-              </form>
-<!--                rout to register page on click Register-->
-                <p class="mt-2"><a href="/reset_pass">Forget Password?</a></p>
+                  <form class="form" method="post" action="/login_validation">
+                    <label>Email</label><br>
+                    <input type="email" class="form-control" name="email" placeholder="Enter your registered email" required><br>
+                    <label>Password</label><br>
+                    <input type="password" class="form-control" name="password" placeholder="Enter your password" required><br><br>
+                    <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+                  </form>
+                <!-- Reset Password -->
+                <p class="mt-2" data-toggle="modal" data-target="#password_reset"><a href="#password_reset">Forget Password?</a></p>
+                <!-- Modal -->
+                <div class="modal top fade" id="password_reset" tabindex="-1" aria-labelledby="exampleModalLabel"
+                 aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+                    <div class="modal-dialog" style="width: 300px;">
+                    <div class="modal-content text-center">
+                        <div class="modal-header h5 text-white bg-primary justify-content-center">
+                            Password Reset
+                        </div>
+                        <div class="modal-body px-5">
+                            <p class="py-2">
+                                Enter your registered email address to reset your password.
+                            </p>
+                            <form class="form" method="post" action="/reset">
+                                <input type="email" class="form-control " id="femail" name="femail" placeholder="Enter registered email" required>
+<!--                                <div class="row">-->
+<!--                                    <div class="col-md-6">-->
+<!--                                    </div>-->
+<!--                                    <div class="col-md-6">-->
+<!--                                        <input type="submit" class="btn btn-primary my-2 btn-sm " id="otpbtn" name="reset2" onclick="disableButton(this,femail,otp,reset)" value="Send OTP">-->
+<!--                                    </div>-->
+<!--                                </div>-->
+
+                                <input type="password" class="form-control my-1"  name="pswd" placeholder="Enter New Password" required><br>
+                                <input type="submit" class="btn my-2 btn-primary btn-block" id="reset" name="reset" value="Reset">
+
+                            </form>
+                            <div class="d-flex justify-content-between mt-4">
+                                <a class="" href="/">Login</a>
+                                <a class="" href="/register">Register</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
               <p class="mt-2">Not a member? <a href="/register">Register</a></p>
                 <p class="mt-2">Any Query? <a href="/contact">Contact Us</a> </p>
-
             </div>
           </div>
-
         </div>
-
-
-
       </div>
-
     </div>
 
     <!-- Optional JavaScript -->
