--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@
     margin-top : 40px
 }
 
+.mt-60{
+    margin-top : 60px
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
