--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
         <div class="col-md-4">
 <!--          this is second columns, adding login section in this -->
             {% for message in get_flashed_messages() %}
-         <div class="alert alert-warning alert-dismissible fade show my-1" role="alert">
+         <div class="alert alert-warning alert-dismissible fade show my-1" id="alert" role="alert">
                     {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -89,6 +89,12 @@
         </div>
       </div>
     </div>
+<script type="text/javascript">
+        setTimeout(function () {
+                    // Closing the alert
+                    $('#alert').alert('close');
+                }, 3000);
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
