--- a/templates/register.html
+++ b/templates/register.html
@@ -31,7 +31,7 @@
         <div class="col-md-4">
 <!--          second columns, adding login section in this -->
             {% for message in get_flashed_messages() %}
-         <div class="alert alert-warning alert-dismissible fade show my-1" role="alert">
+         <div class="alert alert-warning alert-dismissible fade show my-1" id="alert" role="alert">
                     {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -67,6 +67,12 @@
 
     </div>
 
+<script type="text/javascript">
+        setTimeout(function () {
+                    // Closing the alert
+                    $('#alert').alert('close');
+                }, 3000);
+    </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
