--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -9,7 +9,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+        <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
         <title>Expense Tracker - Analysis</title>
     </head>
     <body>
@@ -27,7 +27,14 @@
 
      <div class="container">
          <h1>Dashboard</h1>
-         <div id='chart' class='chart'”></div>
+         <div class="row">
+             <div class="col-md-8">
+                 <div id='chart' class='chart'></div>
+             </div>
+             <div class="col-md-4">
+                 <div id='chart2' class='chart'></div>
+             </div>
+         </div>
      </div>
 
 
@@ -40,6 +47,10 @@
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
     <script type='text/javascript'>
       var graphs = {{graphJSON | safe}};
+      var graphs2 = {{graphJSON2 | safe}};
       Plotly.plot('chart',graphs,{});
+      Plotly.plot('chart2',graphs2,{});
     </script>
+
+
 </html>
