--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
-
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <title>Expense Tracker - Home</title>
     </head>
-    <body>
+    <body class="page-bg">
      <div class="bg-nav d-flex flex-column flex-md-row align-items-center pb-0 mb-0 border-bottom">
       <h5 class="m-3 mr-md-auto font-weight-normal">Expense Tracker - {{ user_name }}</h5>
 
@@ -35,81 +34,54 @@
          {% endfor %}
      </div>
 
-     <div class="container">
-         <div class="row my-2">
+     <div class="container ">
+         <div class="row my-2 ">
              <div class="col-md-3">
-                 <div class="card">
-                     <div class="card-body bg-warning">
+                 <div class="card deep-purple my-1">
+                     <div class="card-body ">
                          <h5 class="text-center">Total Earnings</h5>
-                         <h1 class="text-center">Rs 56000</h1>
+                         <h2 class="text-center">Rs {{ earning }}</h2>
                      </div>
                  </div>
              </div>
              <div class="col-md-3">
-                 <div class="card">
-                     <div class="card-body bg-danger">
+                 <div class="card alive my-1">
+                     <div class="card-body ">
                          <h5 class="text-center">Total Spends</h5>
-                         <h1 class="text-center">Rs 20000</h1>
+                         <h2 class="text-center">Rs {{ spend }}</h2>
                      </div>
                  </div>
              </div>
              <div class="col-md-3">
-                 <div class="card">
-                     <div class="card-body bg-primary">
+                 <div class="card citrus my-1">
+                     <div class="card-body ">
                          <h5 class="text-center">Total Investments</h5>
-                         <h1 class="text-center">Rs 15000</h1>
+                         <h2 class="text-center">Rs {{ invest }}</h2>
                      </div>
                  </div>
              </div>
              <div class="col-md-3">
-                 <div class="card">
-                     <div class="card-body bg-success">
+                 <div class="card green my-1">
+                     <div class="card-body ">
                          <h5 class="text-center">Total Savings</h5>
-                         <h1 class="text-center">Rs 21000</h1>
+                         <h2 class="text-center">Rs {{ saving }}</h2>
                      </div>
                  </div>
              </div>
          </div>
 
          <div  class="row mt-3">
-             <div class="col-md-9">
-                 <table class="table table-dark">
-                  <thead>
-                    <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">Date</th>
-                      <th scope="col">Expense</th>
-                      <th scope="col">Amount</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <th scope="row">1</th>
-                      <td>10-10-2022</td>
-                      <td>Earnings</td>
-                      <td>56000</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>15-10-2022</td>
-                      <td>Spends</td>
-                      <td>20000</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>16-10-2022</td>
-                      <td>Invested</td>
-                      <td>15000</td>
-                    </tr>
-                  </tbody>
-                </table>
-             </div>
-             <div class="col-md-3">
-                 <div class="card text-center">
-                     <div class="card-body">
-                         <p>Create a new expense</p>
-                         <button type="button" data-toggle="modal" data-target="#add_record" class="btn btn-primary">Add New Record</button>
-                         <div class="modal top fade mt-60" id="add_record" tabindex="-1" aria-labelledby="exampleModalLabel"
+             <div class="col-md-12">
+                 <div class="row">
+                     <div class="col-md-4">
+                         <h4>Latest 3 Records</h4>
+                     </div>
+                     <div class="col-md-8 text-right">
+
+                        <button type="button" data-toggle="modal" data-target="#add_record" class="btn btn-primary btn-sm">Add New Record</button>
+                     </div>
+                 </div>
+                 <div class="modal top fade mt-60" id="add_record" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
                             <div class="modal-dialog" style="width: 400px;">
                             <div class="modal-content text-center">
@@ -134,10 +106,45 @@
                             </div>
                             </div>
                         </div>
-                     </div>
-                 </div>
+
+                 <table class="table table-dark">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Date</th>
+                      <th scope="col">Expense</th>
+                      <th scope="col">Amount</th>
+                      <th scope="col">Note</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  {% for row in table_data %}
+                        <tr>
+                          <th scope="row">{{ loop.index }}</th>
+                          <td>{{ row[2] }}</td>
+                          <td>{{ row[3] }}</td>
+                          <td>{{ row[4] }}</td>
+                          <td>{{ row[5] }}</td>
+                        </tr>
+                  {% endfor %}
+                  </tbody>
+                </table>
              </div>
          </div>
+         <div class="row">
+             <div class="col-md-7">
+                 <div id="chart" class="chart"></div>
+             </div>
+             <div class="col-md-5">
+                 <div id="chart2" class="chart"></div>
+             </div>
+         </div>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
      </div>
 
     <script type="text/javascript">
@@ -152,5 +159,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   </body>
+   <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> <!-- Plotly CDN -->
+    </body>
+
+    <script type='text/javascript'>
+      var graphs = {{graphJSON | safe}};
+      var graphs2 = {{graphJSON2 | safe}};
+      Plotly.plot('chart',graphs,{});
+      Plotly.plot('chart2',graphs2,{});
+    </script>
 </html>
