--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -10,11 +10,13 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+        <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> <!-- Plotly CDN -->
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script> <!-- Local JS -->
         <title>Expense Tracker - Analysis</title>
     </head>
     <body>
      <div class="bg-nav d-flex flex-column flex-md-row align-items-center pb-0 mb-0 border-bottom">
-      <h5 class="m-3 mr-md-auto font-weight-normal">Expense Tracker - {{ user_name }} </h5>
+      <h5 class="m-3 mr-md-auto font-weight-normal"><a href="/" style="text-decoration : none">Expense Tracker - {{ user_name }}</a></h5>
 
       <nav class="m-2 my-md-0 mr-md-3">
         <a class="py-2 m-2 text-dark" href="/home">Home</a>
@@ -34,6 +36,9 @@
              <div class="col-md-4">
                  <div id='chart2' class='chart'></div>
              </div>
+         </div>
+         <div id="myDiv">
+
          </div>
      </div>
 
